feat(device) detect brand Doogee model: Y8 Plus feat(device) detect brand Blu models: Vivo XL2, Vivo One Plus, Vivo 5R feat(device) detect brand Vivo model: X20 Plus (1720) feat(device) detect brand HTC model: One X9 Dual SIM feat(device) detect brand Overmax model: Livecore 7032 feat(device) detect brand Lenovo models: Tab M10 HD (TB-X306X), Tab P11 (TB-J606L), Tab M8 (TB-8505X)
feat(device) added tests for brand Xiaomi: Redmi 8A, Redmi 8, Redmi 7A, Redmi 3, Redmi 3X, Redmi 4X
feat(device) added tests for brand Energizer: Power Max P600S
feat(device) added tests for brand Vestel: Venus V4
feat(device) added tests for brand Samsung: Galaxy A40 (SM-A405FN)
feat(device) added tests for brand Nokia: 9

feat(device) detect brand Vertex models: Impress Astra 4G, Impress Eagle 4G, Impress Rosso,
 Impress City, Impress Flash, Impress Zeon 4G, Impress Zeon 3G, Impress Luck 4G NFC, Impress Cube,
 Impress Pluto,Impress Fire, Impress Click NFC, Impress Aero, Impress Blade, Impress Aqua, Impress Action,
 Impress Life, Impress Phonic, Impress Win, Impress Vira, Impress Indigo, Impress Grip, Impress Eclipse

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -125,6 +125,8 @@ HTC:
       model: 'One M9'
     - regex: 'HTC[_ ]M9pw(?:[);/ ]|$)'
       model: 'One M9 Plus'
+    - regex: 'HTC One (X9) dual sim(?:[);/ ]|$)'
+      model: 'One $1 Dual SIM'
     - regex: 'HTC(?:6500LVW|PN071)(?:[);/ ]|$)'
       model: 'One M7'
     - regex: '(?:One M8|HTC6525LVW)(?:[);/ ]|$)'
@@ -2850,7 +2852,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI)|Life One X2|G90(?: PRO)?|Grand M3|GRAND (?:5.5 HD|XL LTE)|R1 (?:HD|PLUS)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo 5 Mini|C5L 2020)(?:[);/ ]|$)'
+  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI)|Life One X2|G90(?: PRO)?|Grand M3|GRAND (?:5.5 HD|XL LTE)|R1 (?:HD|PLUS)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo (?:5 Mini|One Plus|5R|XL2)|C5L 2020)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Advance (4.0 ?[LM]|4.0|5.[02](?: HD)?|A4|L[54])'
@@ -2943,6 +2945,10 @@ Blu:
       model: 'Vivo Selfie'
     - regex: '(?:BLU[_ ])?Vivo 5 Mini'
       model: 'Vivo 5 Mini'
+    - regex: '(?:BLU[_ ])?Vivo One Plus'
+      model: 'Vivo One Plus'
+    - regex: '(?:BLU[_ ])?Vivo (5R|XL2)'
+      model: 'Vivo $1'
 
     - regex: 'Touchbook M7 Pro'
       model: 'Touchbook M7 Pro'
@@ -3255,7 +3261,7 @@ Vivo:
       model: 'X5 Pro'
     - regex: 'vivo 1721(?:[);/ ]|$)'
       model: 'X20'
-    - regex: 'X20Plus(?:[);/ ]|$)'
+    - regex: '(?:X20Plus|vivo 1720)(?:[);/ ]|$)'
       model: 'X20 Plus'
     - regex: 'vivo 1725(?:[);/ ]|$)'
       model: 'X21'
@@ -5055,7 +5061,7 @@ DoCoMo:
 
 # Doogee
 Doogee:
-  regex: 'DOOGEE[/ _-]|Valencia2_Y100(?:_?(?:pro|plus))?|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|(?:BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Hitman_DG850|S(?:[568]8|9[056]|59|40)Pro|X95Pro|S[478]0Lite|BL[579]000|N20Pro|(?<!Lenovo )S90C|Ibiza_F2|Iron-bone DG750|X10S|X60L|MIX2)(?:[);/ ]|$)'
+  regex: 'DOOGEE[/ _-]|Valencia2_Y100(?:_?(?:pro|plus))?|Y100_Plus|X5max(?:[_ ]PRO)?|Shoot_[12]|x5_doogee|(KISSME|BIGBOY|COLLO[23]?|DAGGER|DISCOVERY2?|FIND|HOTWIND|LATTE|MAX|MINT|MOON|PIXELS|RAINBOX|TURBO|VALENCIA|VOYAGER2?|TITANS2?)[ -_](DG[0-9]+C?)(?:[);/ ]|$)|(?:BL12000|BL5500[_ ]Lite|X9 Mini|LEO_DG280|Y9Plus|Y8 Plus|Hitman_DG850|S(?:[568]8|9[056]|59|40)Pro|X95Pro|S[478]0Lite|BL[579]000|N20Pro|(?<!Lenovo )S90C|Ibiza_F2|Iron-bone DG750|X10S|X60L|MIX2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:Valencia2_)?Y100_Plus(?:[);/ ]|$)'
@@ -5104,8 +5110,8 @@ Doogee:
       model: '$1'
     - regex: 'DOOGEE[ _-]([^);/]+)(?:[);/ ]|$)'
       model: '$1'
-    - regex: 'Y9Plus(?:[);/ ]|$)'
-      model: 'Y9 Plus'
+    - regex: 'Y([89]) ?Plus(?:[);/ ]|$)'
+      model: 'Y$1 Plus'
     - regex: 'MIX2(?:[);/ ]|$)'
       model: 'Mix 2'
 
@@ -9446,8 +9452,8 @@ Lenovo:
     - regex: 'TB-X705F(?:[);/ ]|$)'
       model: 'Tab P10'
       device: 'tablet'
-    - regex: 'TB-X705F(?:[);/ ]|$)'
-      model: 'Tab P10'
+    - regex: 'TB-J606L(?:[);/ ]|$)'
+      model: 'Tab P11'
       device: 'tablet'
     - regex: 'TB-7104[IF](?:[);/ ]|$)'
       model: 'Tab E7'
@@ -9552,7 +9558,7 @@ Lenovo:
     - regex: 'Yoga Tablet([^;/]+) Build'
       model: 'Yoga Tablet$1'
       device: 'tablet'
-    - regex: 'TB-8505F'
+    - regex: 'TB-8505[FX]'
       model: 'Tab M8'
       device: 'tablet'
     - regex: 'TB-8705F'
@@ -12867,7 +12873,7 @@ Ouki:
 
 # Overmax
 Overmax:
-  regex: 'OV-[a-z]+(?:[^;(/]*)[();/ ]|Qualcore 10(?:10|27)|Vertis 5021 Aim|Vertis 4004 You|OV1027[34]G'
+  regex: 'OV-[a-z]+(?:[^;(/]*)[();/ ]|Qualcore 10(?:10|27)|Livecore7032|Vertis 5021 Aim|Vertis 4004 You|OV1027[34]G'
   device: 'tablet'
   models:
     - regex: 'OV-V10'
@@ -12882,17 +12888,14 @@ Overmax:
     - regex: 'OV-Vertis[ _-]([^;/]+) Build'
       model: 'Vertis $1'
       device: 'smartphone'
-
+    - regex: 'Livecore7032'
+      model: 'Livecore 7032'
     - regex: 'Qualcore 1010'
       model: 'Qualcore 1010'
-      device: 'tablet'
     - regex: 'Qualcore 1027 4G'
       model: 'Qualcore 1027 4G'
-      device: 'tablet'
     - regex: 'OV1027([34])G'
       model: 'Qualcore 1027 $1G'
-      device: 'tablet'
-
     - regex: '(OV-[a-z]+(?:[^;(/]*))(?<!Build)[();/ ]'
       model: '$1'
 
@@ -19464,7 +19467,7 @@ Inoi:
     - regex: 'INOI[_ ]([^);/]+)(?: Build|[;)])'
       model: '$1'
 
-# Vertex
+# Vertex (vertex-digital.ru)
 Vertex:
   regex: '(?:Luck|Lion_Dual|V709X|Tab [43]G (?:7-2|8-1|10-1)|Pro_P3[01]0_4G|Lion_DC|Baccara|Eagle[ _]4G|ImpressMAX)(?:[);/ ]|$)|Impress[ _]([^;/]+)(?:Build|\))'
   device: 'smartphone'
@@ -19473,9 +19476,15 @@ Vertex:
       model: '$1'
     - regex: 'Impress ?MAX(?:[);/ ]|$)'
       model: 'Impress Max'
+    - regex: 'IMPRESS ECLIPSE(?:[);/ ]|$)'
+      model: 'Impress Eclipse'
     - regex: 'Pro_P(3[01]0)_4G(?:[);/ ]|$)'
       model: 'Pro P$1 4G'
-    - regex: '(Impress[ _]([^;/]+))(?:Build|\))'
+    - regex: 'Impress_Luck[_ ]?4G_NFC(?:[);/ ]|$)'
+      model: 'Impress Luck 4G NFC'
+    - regex: '(Impress[ _](?:[^;/]+))[ _]?([34])G(?:Build|\))'
+      model: '$1 $2G'
+    - regex: '(Impress[ _](?:[^;/]+))(?:Build|\))'
       model: '$1'
     - regex: '(V709X)'
       device: 'tablet'
