--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -91,7 +91,7 @@ HTC:
       model: 'U11'
     - regex: '2PZF1(?:[);/ ]|$)'
       model: 'U Ultra'
-    - regex: 'HTC_U-2u(?:[);/ ]|$)'
+    - regex: 'HTC[_ ](?:U-2u|U Play|2PZM3)(?:[);/ ]|$)'
       model: 'U Play'
     - regex: '(?:U11 plus|(?:HTC_)?2Q4D100)(?:[);/ ]|$)'
       model: 'U11 Plus'
@@ -113,6 +113,8 @@ HTC:
       model: 'One Mini 2'
     - regex: 'X2-HT(?:[);/ ]|$)'
       model: 'One X2'
+    - regex: 'HTC 2PXH3(?:[);/ ]|$)'
+      model: 'One X10'
     - regex: 'ISW13HT(?:[);/ ]|$)'
       model: 'J'
     - regex: 'HTL22(?:[);/ ]|$)'
@@ -121,20 +123,26 @@ HTC:
       model: 'J Butterfly'
     - regex: 'HTCButterflys901s(?:[);/ ]|$)'
       model: 'Butterfly S'
-    - regex: '(?:0PJA2|0PJA10|HTC One M9)(?:[);/ ]|$)'
-      model: 'One M9'
-    - regex: 'HTC[_ ]M9pw(?:[);/ ]|$)'
+    - regex: 'One M9_Prime Camera Edition'
+      model: 'One M9 Prime Camera Edition'
+    - regex: '(?:HTC[_ ])?(?:M9pw|One M9 ?PLUS)(?:[);/ ]|$)'
       model: 'One M9 Plus'
-    - regex: 'HTC One (X9) dual sim(?:[);/ ]|$)'
+    - regex: '(?:0PJA2|0PJA10|HTC One M9|HTC6535LVW)(?:[);/ ]|$)'
+      model: 'One M9'
+    - regex: 'One[ _](X9|[EM]8) dual sim(?:[);/ ]|$)'
       model: 'One $1 Dual SIM'
+    - regex: 'Desire[ _](.+) dual sim(?:[);/ ]|$)'
+      model: 'Desire $1 Dual SIM'
     - regex: 'HTC(?:6500LVW|PN071)(?:[);/ ]|$)'
       model: 'One M7'
-    - regex: '(?:One M8|HTC6525LVW)(?:[);/ ]|$)'
+    - regex: '(?:One M8|HTC6525LVW|HTC[_ ]M8[xd]|HTC[_ ]0P6B)(?:[);/ ]|$)'
       model: 'One M8'
     - regex: '0PAJ5(?:[);/ ]|$)'
       model: 'One E8'
     - regex: 'HTC[_ ]E9x(?:[);/ ]|$)'
       model: 'One E9'
+    - regex: 'HTC_S9u(?:[);/ ]|$)'
+      model: 'One S9'
     - regex: 'HTC6515LVW(?:[);/ ]|$)'
       model: 'One Remix'
     - regex: 'X525a(?:[);/ ]|$)'
@@ -155,7 +163,7 @@ HTC:
       model: 'Vox'
     - regex: '2PYB2'
       model: 'Bolt'
-    - regex: '2PS64'
+    - regex: '2PS64|HTC6545LVW'
       model: '10'
     - regex: '0PM92(?:[);/ ]|$)'
       model: 'Desire 626S'
@@ -181,6 +189,10 @@ HTC:
       model: 'Exodus 1'
     - regex: 'HTC 2Q7A100(?:[);/ ]|$)'
       model: 'U19e'
+    - regex: 'HTC_D10i(?:[);/ ]|$)'
+      model: 'Desire 10 Pro'
+    - regex: 'HTC Desire (.+) pro(?:[);/ ]|$)'
+      model: 'Desire $1 Pro'
 
     - regex: 'NexusHD2' # custom rom for hd2
       model: 'HD2'
@@ -19482,7 +19494,7 @@ Vertex:
       model: 'Pro P$1 4G'
     - regex: 'Impress_Luck[_ ]?4G_NFC(?:[);/ ]|$)'
       model: 'Impress Luck 4G NFC'
-    - regex: '(Impress[ _](?:[^;/]+))[ _]?([34])G(?:Build|\))'
+    - regex: '(Impress[ _][a-z]+)([34])G(?:Build|\))'
       model: '$1 $2G'
     - regex: '(Impress[ _](?:[^;/]+))(?:Build|\))'
       model: '$1'
