Detect bots: LinkPreview, JungleKeyThumbnail (#6815)
* feat(bots) detect bot: LinkPreview

* feat(bots) detect bot: JungleKeyThumbnail

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4353,3 +4353,15 @@
     producer:
       name: Neeva Inc.
       url: https://neeva.com/
+-
+  user_agent: LinkPreview/1.5 (http://linkpreview.net)
+  bot:
+    name: LinkPreview
+    category: Service Agent
+    url: https://www.linkpreview.net/
+-
+  user_agent: Mozilla/5.0 (compatible; JungleKeyThumbnail/1.1; +http://www.junglekey.fr/)
+  bot:
+    name: JungleKeyThumbnail
+    category: Crawler
+    url: https://junglekey.com/
