--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4365,3 +4365,21 @@
     name: JungleKeyThumbnail
     category: Crawler
     url: https://junglekey.com/
+-
+  user_agent: rocketmonitor 1.0
+  bot:
+    name: RocketMonitorBot
+    category: Site Monitor
+    url: https://www.radiomast.io/docs/stream-monitoring/technical_details.html
+    producer:
+      name: Radio Mast, Inc.
+      url: https://www.radiomast.io/
+-
+  user_agent: RocketMonitorBot/1.0 ( https://www.radiomast.io)
+  bot:
+    name: RocketMonitorBot
+    category: Site Monitor
+    url: https://www.radiomast.io/docs/stream-monitoring/technical_details.html
+    producer:
+      name: Radio Mast, Inc.
+      url: https://www.radiomast.io/
