Adds detection for SitemapParser-VIPnytt

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4383,3 +4383,9 @@
     producer:
       name: Radio Mast, Inc.
       url: https://www.radiomast.io/
+-
+  user_agent: SitemapParser-VIPnytt/1.1 ( https://github.com/VIPnytt/SitemapParser/blob/master/README.md)
+  bot:
+    name: SitemapParser-VIPnytt
+    category: Crawler
+    url: https://github.com/VIPnytt/SitemapParser/
