--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2559,6 +2559,11 @@
     name: 'Radio Mast, Inc.'
     url: 'https://www.radiomast.io/'
 
+- regex: 'SitemapParser-VIPnytt/([\d+\.])'
+  name: 'SitemapParser-VIPnytt'
+  category: 'Crawler'
+  url: 'https://github.com/VIPnytt/SitemapParser/'
+
 # Generic detections
 
 - regex: '[a-z0-9\-_]*((?<!cu|power[ _]|m[ _])bot(?![ _]TAB|[ _]?5[0-9])|crawler|crawl|checker|archiver|transcoder|spider)([^a-z]|$)'
