Adds detection for various bots (#6817)
* Adds detection for RocketMonitorBot
ref #6816
* Adds detection for SitemapParser-VIPnytt

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -4365,3 +4365,27 @@
     name: JungleKeyThumbnail
     category: Crawler
     url: https://junglekey.com/
+-
+  user_agent: rocketmonitor 1.0
+  bot:
+    name: RocketMonitorBot
+    category: Site Monitor
+    url: https://www.radiomast.io/docs/stream-monitoring/technical_details.html
+    producer:
+      name: Radio Mast, Inc.
+      url: https://www.radiomast.io/
+-
+  user_agent: RocketMonitorBot/1.0 ( https://www.radiomast.io)
+  bot:
+    name: RocketMonitorBot
+    category: Site Monitor
+    url: https://www.radiomast.io/docs/stream-monitoring/technical_details.html
+    producer:
+      name: Radio Mast, Inc.
+      url: https://www.radiomast.io/
+-
+  user_agent: SitemapParser-VIPnytt/1.1 ( https://github.com/VIPnytt/SitemapParser/blob/master/README.md)
+  bot:
+    name: SitemapParser-VIPnytt
+    category: Crawler
+    url: https://github.com/VIPnytt/SitemapParser/
