feat(app) detect app: NTV Mobil

--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -596,3 +596,8 @@
 - regex: '.+/(?:gfibertv|gftv200)-([\d]+)-'
   name: 'Google Fiber TV'
   version: '$1'
+
+# https://www.n-tv.de/
+- regex: 'ntvmobil/'
+  name: 'NTV Mobil'
+  version: ''
