--- a/Tests/fixtures/mobile_apps.yml
+++ b/Tests/fixtures/mobile_apps.yml
@@ -1135,3 +1135,19 @@
     model: Galaxy J2 Core
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: ntvmobil/5051900 CFNetwork/808.1.4 Darwin/16.1.0
+  os:
+    name: iOS
+    version: "10.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: NTV Mobil
+    version: ""
+  device:
+    type: ""
+    brand: Apple
+    model: ""
+  os_family: iOS
+  browser_family: Unknown
