feat(device) detect brand Wileyfox model: Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17726,11 +17726,13 @@ Weimei:
 
 # Wileyfox
 Wileyfox:
-  regex: '(?:Wileyfox [^/]+)|Swift 2(?:[);/ ]|$)'
+  regex: 'Wileyfox|Swift 2(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Wileyfox Spark \+'
       model: 'Spark +'
+    - regex: 'Wileyfox; Pro'
+      model: 'Pro'
     - regex: 'Wileyfox Spark X'
       model: 'Spark X'
     - regex: 'Wileyfox (Spark|Swift)'
