--- a/Tests/fixtures/smartphone-25.yml
+++ b/Tests/fixtures/smartphone-25.yml
@@ -1619,3 +1619,21 @@
     model: Blade A3 (2019)
   os_family: Android
   browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Windows Phone 10.0; Android 6.0.1; Wileyfox; Pro) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/52.0.2743.116 Mobile Safari/537.36 Edge/15.15254
+  os:
+    name: Windows Phone
+    version: "10.0"
+    platform: ""
+  client:
+    type: browser
+    name: Microsoft Edge
+    version: "15.15254"
+    engine: Edge
+    engine_version: "15.15254"
+  device:
+    type: smartphone
+    brand: Wileyfox
+    model: Pro
+  os_family: Windows Mobile
+  browser_family: Internet Explorer
