feat(device) detect brand Umax model: VisionBook 10A LTE feat(device) detect brand Sencor model: 10.1Q205

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14717,9 +14717,9 @@ Selfix:
     - regex: 'VOYAGER-V45'
       model: 'Voyager V45'
 
-# Sencor
+# Sencor (sencor.cz or sencor.com)
 Sencor:
-  regex: 'Sencor|ELEMENT[ _]?(?:7|8|9\.7|10[ _]1)(?:[ _]?V[23])?(?:[);/ ]|$)|ELEMENT[ _]?(?:P[0-9]+|10.1 Q001)(?:[);/ ]|$)'
+  regex: 'Sencor|(?:ELEMENT[ _]?(?:(?:7|8|9\.7|10[ _]1)(?:[ _]?V[23])?|P[0-9]+|10.1 Q001)|10_1Q205)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     # explicit tablet models
@@ -14747,6 +14747,8 @@ Sencor:
       model: 'Element 10.1'
     - regex: '(?:SENCOR[ _])?(7Q105)(?:[);/ ]|$)'
       model: '$1'
+    - regex: '(10)_(1Q205)(?:[);/ ]|$)'
+      model: '$1.$2'
 
     - regex: '(?:SENCOR[ _])?ELEMENT[ _]?P([0-9]+)'
       model: 'Element P$1'
@@ -19814,9 +19816,9 @@ Qumo:
       device: 'smartphone'
       model: 'Quest $1'
 
-# Umax
+# Umax (umax.cz)
 Umax:
-  regex: 'VisionBook[ _]|([78]Qa_3G|VB_10Q_Plus)(?:[);/ ]|$)'
+  regex: 'VisionBook[ _]|([78]Qa_3G|VB_10Q_Plus|10A_LTE_eea)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: '(VisionBook[ _](?:10Qi|7Q[i]?|8Q[ei]?|P70|8Qi_3G)(?:[ _](?:[34]G|Plus|LTE))?)(?:[);/ ]|$)'
@@ -19825,6 +19827,8 @@ Umax:
       model: 'VisionBook $1Qa 3G'
     - regex: 'VisionBook_10Q_LTE(?:[);/ ]|$)'
       model: 'VisionBook 10Q LTE'
+    - regex: '10A_LTE_eea(?:[);/ ]|$)'
+      model: 'VisionBook 10A LTE'
     - regex: 'VB_10Q_Plus(?:[);/ ]|$)'
       model: 'VisionBook 10Q Plus'
     - regex: 'VisionBook_P50Plus_LTE(?:[);/ ]|$)'
