feat(device) detect brand Meizu models: M6 Note, C9 Pro, M8 Lite feat(device) detect brand Huawei model: GT3 (NMO-L31) feat(device) detect brand Blu model: Vivo 8L feat(device) detect brand Hisense model: Rock 5 feat(device) detect brand MyPhone model: Pocket Pro feat(device) detect brand ZTE model: Blade A6 Lite (A0622), Blade V9 Vita (V0920) feat(device) detect brand Vivo models: Nex 3 (1912), Nex S, Z3x

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2848,7 +2848,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI|View)|Life One X2|G90(?: PRO)?|Grand M3|GRAND (?:5.5 HD|XL LTE)|R1 (?:HD|PLUS)|R2 (?:LTE|Plus)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo 5 Mini|C5L 2020)(?:[);/ ]|$)'
+  regex: 'BLU[ _]|(?:blu|Dash)[ _]([^/;)]+)(?: Build|[;)])|(?:Studio[ _](5.0K|5.5|View XL|Mega|C 8\+8|[CGM][ _]HD|[CGX]|SELFIE|Selfie LTE|Touch|M5 Plus|J[1258]|X8 HD)|Advance (4.0 ?[LM]|5.[02](?: HD)?|A4|L[45])|ENERGY (DIAMOND|XL)|Energy X 2|LIFE XL|B110DL|Dash (?:X[2L]|L3)|PURE (?:X[LR]|MINI|View)|Life One X2|G90(?: PRO)?|Grand M3|GRAND (?:5.5 HD|XL LTE)|R1 (?:HD|PLUS)|R2 (?:LTE|Plus)|Tank Xtreme [45].0|Tank Xtreme Pro|Touchbook M7 Pro|DASH X PLUS|C[456] 2019|BOLD N1|B130DL|Vivo 5 Mini|Vivo 8L|C5L 2020)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Advance (4.0 ?[LM]|4.0|5.[02](?: HD)?|A4|L[54])'
@@ -2943,6 +2943,8 @@ Blu:
       model: 'Vivo Selfie'
     - regex: '(?:BLU[_ ])?Vivo 5 Mini'
       model: 'Vivo 5 Mini'
+    - regex: '(?:BLU[_ ])?Vivo 8L'
+      model: 'Vivo 8L'
 
     - regex: 'Touchbook M7 Pro'
       model: 'Touchbook M7 Pro'
@@ -3181,12 +3183,14 @@ Vivo:
       model: 'U20'
     - regex: 'vivo 1805(?:[);/ ]|$)'
       model: 'Nex'
-    - regex: 'V1923A(?:[);/ ]|$)'
+    - regex: '(?:vivo 1912|V1923A)(?:[);/ ]|$)'
       model: 'Nex 3'
     - regex: 'V1924A(?:[);/ ]|$)'
       model: 'Nex 3 5G'
     - regex: 'V1950A(?:[);/ ]|$)'
       model: 'Nex 3S'
+    - regex: 'vivo NEX S(?:[);/ ]|$)'
+      model: 'Nex S'
     - regex: 'V1821[AT](?:[);/ ]|$)'
       model: 'Nex Dual Display'
     - regex: 'Vivo ONE(?:[);/ ]|$)'
@@ -3403,7 +3407,7 @@ Vivo:
       model: 'Z1x'
     - regex: 'V1813B[AT](?:[);/ ]|$)'
       model: 'Z3'
-    - regex: 'V1730GA(?:[);/ ]|$)'
+    - regex: '(?:vivo Z3x|V1730GA)(?:[);/ ]|$)'
       model: 'Z3x'
     - regex: 'V1921A(?:[);/ ]|$)'
       model: 'Z5'
@@ -7472,6 +7476,8 @@ Huawei:
       model: 'Y9a'
     - regex: '302HW(?:[);/ ]|$)'
       model: 'Stream S'
+    - regex: 'NMO-L31(?:[);/ ]|$)'
+      model: 'GT3'
 
     - regex: 'HWT31(?:[);/ ]|$)'
       model: 'Qua Tab 02 10.1"'
@@ -10883,7 +10889,7 @@ Meizu:
       model: 'M1 Metal'
     - regex: 'M1813(?:[);/ ]|$)'
       model: 'M8'
-    - regex: 'M1816(?:[);/ ]|$)'
+    - regex: '(?:M1816|M8 lite)(?:[);/ ]|$)'
       model: 'M8 Lite'
 
     - regex: 'PRO 7-[HS](?:[);/ ]|$)'
@@ -10912,8 +10918,8 @@ Meizu:
       model: '16th'
     - regex: 'MZ-16 X(?:[);/ ]|$)'
       model: '16X'
-    - regex: 'meizu 17 Pro(?:[);/ ]|$)'
-      model: '17 Pro'
+    - regex: 'meizu (17|C9) Pro(?:[);/ ]|$)'
+      model: '$1 Pro'
     - regex: 'Meizu[_ ]note([89])(?:[);/ ]|$)'
       device: 'phablet'
       model: 'Note $1'
@@ -11588,6 +11594,8 @@ MyPhone:
       model: 'Prime 3 Lite'
     - regex: 'Brown 1(?:[);/ ]|$)' # ARK Brown 1
       model: 'Brown 1'
+    - regex: 'myPhone[_ ]Pocket[_ ]Pro'
+      model: 'Pocket Pro'
 
     # general detections
     - regex: 'MyPhone[ _]([^;/)]+)( Build|\))'
@@ -19142,6 +19150,8 @@ ZTE:
       model: 'Blade A6'
     - regex: 'BLADE A6 MAX(?:[);/ ]|$)'
       model: 'Blade A6 Max'
+    - regex: 'A0622(?:[);/ ]|$)'
+      model: 'Blade A6 Lite'
     - regex: 'Blade S6 Plus(?:[);/ ]|$)'
       model: 'Blade S6 Plus'
     - regex: 'Blade S6(?:[);/ ]|$)'
@@ -19172,6 +19182,8 @@ ZTE:
       model: 'Blade V8Q'
     - regex: 'Blade V8 SE(?:[);/ ]|$)'
       model: 'Blade V8 SE'
+    - regex: 'BLADE V0920'
+      model: 'Blade V9 Vita'
     - regex: 'Blade V(9|10) Vita(?:[);/ ]|$)'
       model: 'Blade V$1 Vita'
     - regex: 'Blade V([89]|10)(?:[);/ ]|$)'
