--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -6734,3 +6734,21 @@
     model: Redmi Note 5
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; arm_64; Android 7.1.2; M6 Note) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.216 YaBrowser/21.5.5.110.00 SA/3 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 7.1.2
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 21.5.5.110.00
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: Meizu
+    model: M6 Note
+  os_family: Android
+  browser_family: Unknown
