feat(device) detect brand Infinix models: Note 8 (X692), Note 7 (X690B), Zero 8i (X687B),  Zero 8 (X687), Note 8i (X683), Note 10 Pro (X695C), Smart HD (2021) (X612B), Smart 5 (X657, X657B, X657C),  Hot 9 Play (X680F, X680), Hot 10 Play (X688C, X688B), Hot 10 (X682B, X682C), S5 Pro (X660C), Hot 8 (X650),  Smart 2 HD (X609), Smart 4 (X653C), Smart 3 Plus (X627), Hot 7 Pro (X625C), Hot 8 (X650B, X650D),  S5 Lite (X652B), Hot 5 Lite (X559) feat(device) detect brand Huawei models: G9 Plus (MLA-TL10, MLA-TL00), Mate 8 (NXT-L09), P9 (EVA-L19), Honor 8X (JSN-L22),  Nova 3i (INE-TL00) feat(device) detect brand Inoi models: 5 Lite (2021), 2 Lite (2021), 2 (2021) feat(device) detect brand Oukitel model: K15 Plus

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7258,7 +7258,7 @@ Huawei:
       model: 'Mate 40 Pro'
     - regex: 'NOP-AN00(?:[);/ ]|$)'
       model: 'Mate 40 Pro+'
-    - regex: 'NXT-(?:AL10|L29)(?:[);/ ]|$)'
+    - regex: 'NXT-(?:AL10|L[02]9)(?:[);/ ]|$)'
       model: 'Mate 8'
     - regex: 'MHA-(?:L[02]9|[AT]L00)(?:[);/ ]|$)'
       model: 'Mate 9'
@@ -7388,6 +7388,8 @@ Huawei:
       model: 'P9 Lite Smart'
     - regex: 'VIE-(?:AL10|L[02]9)(?:[);/ ]|$)'
       model: 'P9 Plus'
+    - regex: 'MLA-TL[01]0(?:[);/ ]|$)'
+      model: 'G9 Plus'
     - regex: 'ATH-UL0[16](?:[);/ ]|$)'
       model: 'ShotX'
     - regex: 'U(8230|8661|8667)(?:[);/ ]|$)'
@@ -8158,6 +8160,12 @@ Infinix:
       model: 'Zero 5 Pro'
     - regex: 'Infinix[ _-]X620'
       model: 'Zero 6'
+    - regex: 'Infinix[ _-]X687B'
+      device: 'phablet'
+      model: 'Zero 8i'
+    - regex: 'Infinix[ _-]X687'
+      device: 'phablet'
+      model: 'Zero 8'
 
     - regex: 'Infinix[ _-]X507'
       model: 'Hot'
@@ -8183,26 +8191,41 @@ Infinix:
       model: 'Hot 6 Pro'
     - regex: 'Infinix[ _-]X624'
       model: 'Hot 7'
+    - regex: 'Infinix[ _-]X625'
+      model: 'Hot 7 Pro'
     - regex: 'Infinix[ _-]X650'
       model: 'Hot 8'
     - regex: 'Infinix[ _-]X655'
       model: 'Hot 9'
     - regex: 'Infinix[ _-]X680'
       model: 'Hot 9 Play'
+    - regex: 'Infinix[ _-]X688'
+      model: 'Hot 10 Play'
+    - regex: 'Infinix[ _-]X682[BC]'
+      model: 'Hot 10'
     - regex: 'Infinix[ _-]X573B?'
       model: 'Hot S3'
 
+
+    - regex: 'Infinix[ _-]X612'
+      model: 'Smart HD (2021)'
     - regex: 'Infinix[ _-]X5010'
       model: 'Smart'
     - regex: 'Infinix[ _-]X5515F'
       model: 'Smart 2'
-    - regex: 'Infinix[ _-]X627V'
+    - regex: 'Infinix[ _-]X609'
+      model: 'Smart 2 HD'
+    - regex: 'Infinix[ _-]X627'
       model: 'Smart 3 Plus'
     - regex: 'Infinix[ _-]X5514D'
       model: 'Smart 2 Pro'
     - regex: 'Infinix[ _-]X653'
       model: 'Smart 4'
+    - regex: 'Infinix[ _-]X657'
+      model: 'Smart 5'
 
+    - regex: 'Infinix[ _-]X652B'
+      model: 'S5 Lite'
     - regex: 'Infinix[ _-]X626'
       model: 'S4'
     - regex: 'Infinix[ _-]X652'
@@ -8236,6 +8259,15 @@ Infinix:
       device: 'phablet'
     - regex: 'Infinix[ _-]X656'
       model: 'Note 7 Lite'
+      device: 'phablet'
+    - regex: 'Infinix[ _-]X692'
+      model: 'Note 8'
+      device: 'phablet'
+    - regex: 'Infinix[ _-]X683'
+      model: 'Note 8i'
+      device: 'phablet'
+    - regex: 'Infinix[ _-]X695'
+      model: 'Note 10 Pro'
       device: 'phablet'
 
     - regex: 'Infinix HOT ([a-z]?[1-6])( (?:Lite|Plus|Pro))?'
@@ -12853,7 +12885,7 @@ Orange:
 
 # Oukitel
 Oukitel:
-  regex: 'OUKITEL|(?:(?:C15|C16|K10000|K[46]000)(?:[ _]Pro)|K4000Pro|U15 Pro|U16 Max|U7 Max|U7 Plus|U11[_ ]Plus|U20_Plus|OK6000 Plus|WP5000|WP[58] Pro|K[46]000[ _](?:Plus|Lite)|Y4800|K10000|K[4-8]000| WP(?:[5-7]|12))(?:[);/ ]|$)'
+  regex: 'OUKITEL|(?:(?:C15|C16|K10000|K[46]000)(?:[ _]Pro)|K4000Pro|U15 Pro|K15_Plus|U16 Max|U7 Max|U7 Plus|U11[_ ]Plus|U20_Plus|OK6000 Plus|WP5000|WP[58] Pro|K[46]000[ _](?:Plus|Lite)|Y4800|K10000|K[4-8]000| WP(?:[5-7]|12))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(C15|C16|K10000|K[46]000|WP[258]|U15)[ _]?Pro(?:[);/ ]|$)'
@@ -12862,7 +12894,7 @@ Oukitel:
       model: 'K$1'
     - regex: '(K10000|U16|U7)[ _]Max(?:[);/ ]|$)'
       model: '$1 Max'
-    - regex: '(U20|K[46]000|U7|U11|OK6000)[_ ]?Plus(?:[);/ ]|$)'
+    - regex: '(U20|K[46]000|U7|U11|OK6000|K15)[_ ]?Plus(?:[);/ ]|$)'
       model: '$1 Plus'
     - regex: '(K4000)[_ ]Lite(?:[);/ ]|$)'
       model: '$1 Lite'
@@ -19507,8 +19539,8 @@ Inoi:
   regex: 'INOI'
   device: 'smartphone'
   models:
-    - regex: 'INOI 2 Lite 2019'
-      model: '2 Lite (2019)'
+    - regex: 'INOI (2|5) Lite (2019|2021)'
+      model: '$1 Lite ($2)'
     - regex: 'INOI[_ ]([13])[_ ]LITE'
       model: '$1 Lite'
     - regex: 'INOI ([257]) (2019|202[01])(?:[);/ ]|$)'
