feat(device) detect brand Huawei models: Y6 Pro (TIT-L01), Mate 10 (ALP-L29) feat(device) detect brand MyPhone model: FUN 4 feat(device) detect brand Krüger&Matz model: FLOW 7S feat(device) detect brand Evolveo model: StrongPhone G7 feat(device) detect brand HTC models: Desire 626 (HTCD200LVWPP), U12 Plus (2Q55100), U11 (2PZC100, U-3u)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -87,12 +87,12 @@ HTC:
   device: 'smartphone'
   models:
     # explicit smartphone models
-    - regex: '2PZC5(?:[);/ ]|$)'
-      model: 'U11'
     - regex: 'HTC_U-2u(?:[);/ ]|$)'
       model: 'U Play'
     - regex: '(?:U11 plus|(?:HTC_)?2Q4D100)(?:[);/ ]|$)'
       model: 'U11 Plus'
+    - regex: 'HTC (?:U12\+|2Q55100)(?:[);/ ]|$)'
+      model: 'U12 Plus'
     - regex: 'U11 life(?:[);/ ]|$)'
       model: 'U11 Life'
     - regex: 'XV6975(?:[);/ ]|$)'
@@ -101,7 +101,7 @@ HTC:
       model: 'Evo 3G'
     - regex: 'PC36100(?:[);/ ]|$)'
       model: 'Evo 4G'
-    - regex: '(?:HTV33|601HT)(?:[);/ ]|$)'
+    - regex: '(?:HTC[_ ])?(?:HTV33|601HT|2PZC100|2PZC5|U-3u)(?:[);/ ]|$)'
       model: 'U11'
     - regex: '(?:801e|802[wdt])'
       model: 'One'
@@ -167,7 +167,7 @@ HTC:
       model: 'Desire 601'
     - regex: 'HTC_?D620h(?:[);/ ]|$)'
       model: 'Desire 620'
-    - regex: 'HTC_D626ph(?:[);/ ]|$)'
+    - regex: 'HTC[_ ]?(?:D626ph|D200LVWPP)(?:[);/ ]|$)'
       model: 'Desire 626'
     - regex: 'HTC_?(?:0P9C2|D816[xd]?)(?:[);/ ]|$)'
       model: 'Desire 816'
@@ -6052,7 +6052,7 @@ Evolveo:
     - regex: 'Smart TV ([^;/]*) Build'
       device: 'tv'
       model: 'Smart TV $1'
-    - regex: 'EVOLVEO StrongPhone G([248])'
+    - regex: 'EVOLVEO StrongPhone G([2478])'
       model: 'StrongPhone G$1'
     - regex: '(?:EVOLVEO[ _])?StrongPhone[ _]?Q([679])(_LTE)?'
       model: 'StrongPhone Q$1$2'
@@ -9042,7 +9042,7 @@ Kyocera:
 
 # Krüger&Matz (Kruger&Matz)
 Krüger&Matz:
-  regex: 'Kruger[ _&]Matz|KrugerMatz[ _]|FLOW ?5PLUS|FLOW_5|FLOW7|FLOW6(?:S|Lite)|DRIVE9|DRIVE[_ ]6S?|MOVE8mini|MOVE_|LIVE_6plus|LIVE 5 PLUS|LIVE4_KM043[89]|LIVE 7S|KM(?:106[67]|1065G|0701_1|0702|0805_1)'
+  regex: 'Kruger[ _&]Matz|KrugerMatz[ _]|FLOW ?5PLUS|FLOW_5|FLOW7|FLOW6(?:S|Lite)|DRIVE9|DRIVE[_ ]6S?|MOVE8mini|MOVE_|LIVE_6plus|LIVE 5 PLUS|LIVE4_KM043[89]|LIVE 7S|Flow 7S|KM(?:106[67]|1065G|0701_1|0702|0805_1)'
   device: 'smartphone'
   models:
     - regex: 'MOVE8mini'
@@ -11606,7 +11606,7 @@ MyPhone:
       model: 'Pocket 2'
     - regex: 'myA17(?:[);/ ]|$)'
       model: 'myA17'
-    - regex: '(?:myPhone_)?Fun_(8|18x9)'
+    - regex: '(?:myPhone_)?Fun_?([48]|18x9)'
       model: 'FUN $1'
     - regex: 'MyPhoneMY27'
       model: 'my27'
