feat(device) detect brand Xiaomi model: MiTV Stick (MiTV-AESP0) feat(device) detect brand Huawei model: Mate 30 RS Porsche Design (LIO-AN00P) feat(device) detect brand Lava model: Iris 46 (LH9950), Iris 59 (LE9930) feat(device) detect brand Lenovo models: A5s (L18081), A6 Note (L19041), A7 (L19111),  K5 Pro (L38041), K9 (L38043), S5 Pro GT(L58091), A8 (L10041), Z6 Youth (L38111),  Z5 Pro GT L78032), Legion Pro (L79031), Z6 Pro, Vibe C (A2020a40), A6010 Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7248,6 +7248,8 @@ Huawei:
       model: 'Mate 30'
     - regex: 'TAS-AN00(?:[);/ ]|$)'
       model: 'Mate 30 5G'
+    - regex: 'LIO-AN00P(?:[);/ ]|$)'
+      model: 'Mate 30 RS Porsche Design'
     - regex: 'SPN-AL00(?:[);/ ]|$)'
       model: 'Mate 30 Lite'
     - regex: 'LIO-(?:[TA]L00|L29|AN00)(?:[);/ ]|$)'
@@ -9146,6 +9148,10 @@ Lava:
       model: 'Z52'
     - regex: 'LH9810(?:[);/ ]|$)'
       model: 'Iris 52'
+    - regex: 'LE9930(?:[);/ ]|$)'
+      model: 'Iris 59'
+    - regex: 'LH9950(?:[);/ ]|$)'
+      model: 'Iris 46'
     - regex: 'LN9910(?:[);/ ]|$)'
       model: 'Z41'
     - regex: 'LE9910(?:[);/ ]|$)'
@@ -9604,6 +9610,12 @@ Lenovo:
       device: 'tablet'
     - regex: 'L18011(?:[);/ ]|$)'
       model: 'A5'
+    - regex: 'L18081(?:[);/ ]|$)'
+      model: 'A5s'
+    - regex: 'L19111(?:[);/ ]|$)'
+      model: 'A7'
+    - regex: 'L10041(?:[);/ ]|$)'
+      model: 'A8'
     - regex: 'Z2 Plus'
       model: 'Z2 Plus'
     - regex: 'Z2151'
@@ -9626,17 +9638,23 @@ Lenovo:
       model: 'K5'
     - regex: 'L38011(?:[);/ ]|$)'
       model: 'K5 Play'
+    - regex: 'L38041(?:[);/ ]|$)'
+      model: 'K5 Pro'
     - regex: '(?:A7020a4[08]|L38012)(?:[);/ ]|$)'
       model: 'K5 Note'
+    - regex: 'L19041(?:[);/ ]|$)'
+      model: 'A6 Note'
     - regex: 'K31-t3(?:[);/ ]|$)'
       model: 'K31'
+    - regex: 'A6010Pro(?:[);/ ]|$)'
+      model: 'A6010 Pro'
     - regex: '(?:A6020a46|Vibe K5 Plus)(?:[);/ ]|$)'
       model: 'Vibe K5 Plus'
     - regex: '(?:Lenovo-)?(?:A6020(?:a40|l36)|Vibe K5)(?:[);/ ]|$)'
       model: 'Vibe K5'
     - regex: 'VIBE Z2(?:[);/ ]|$)'
       model: 'Vibe Z2'
-    - regex: 'VIBE C(?:[);/ ]|$)'
+    - regex: '(?:VIBE C|A2020a40)(?:[);/ ]|$)'
       model: 'Vibe C'
     - regex: 'VIBE X2(?:[);/ ]|$)'
       model: 'Vibe X2'
@@ -9646,8 +9664,12 @@ Lenovo:
       model: 'Vibe S6i Plus'
     - regex: 'VIBE[ _]S([23567])i(?:[);/ ]|$)'
       model: 'Vibe S$1i'
+    - regex: 'L79031(?:[);/ ]|$)'
+      model: 'Legion Pro'
     - regex: 'k33a48(?:[);/ ]|$)'
       model: 'K6'
+    - regex: 'L38043(?:[);/ ]|$)'
+      model: 'K9'
     - regex: 'P2A42(?:[);/ ]|$)'
       model: 'P2'
     - regex: 'k53a48(?:[);/ ]|$)'
@@ -9674,8 +9696,16 @@ Lenovo:
       model: 'Z5'
     - regex: 'L78031(?:[);/ ]|$)'
       model: 'Z5 Pro'
+    - regex: 'Z6 Pro(?:[);/ ]|$)'
+      model: 'Z6 Pro'
+    - regex: 'L78032(?:[);/ ]|$)'
+      model: 'Z5 Pro GT'
+    - regex: 'L38111(?:[);/ ]|$)'
+      model: 'Z6 Youth'
     - regex: 'L58041(?:[);/ ]|$)'
       model: 'S5 Pro'
+    - regex: 'L58091(?:[);/ ]|$)'
+      model: 'S5 Pro GT'
     - regex: 'L18021(?:[);/ ]|$)'
       model: 'A3'
     - regex: 'PB2-6(?:70M|50Y)(?:[);/ ]|$)'
@@ -17887,7 +17917,7 @@ POCO:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11(?:[CG]|AC)|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[GY]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GC])|M2010J19S[CGYI]|M1908C3JGG|M2102(?:K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)(?:[);/ ]|$)|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|POCOPHONE|(?:SHARK )?(KLE|MBU)-[AH]0|SK[RW]-[AH]0|PRS-H0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP[01]|AXSO0|AESP0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006J10C|M2006C3(?:L[IGC]|LVG|MN?G|MT)|M2007J1(?:7[CGI]|SC)|M2002J9[EG]|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2012K11(?:[CG]|AC)|M2011K2[CG]|M2006C3[ML]II|M2003J15SC|M2007J3S[ICYGP]|M2007J22[CG]|M2103K19[GY]|M2101K(?:[79]AG|7AI|7B[GI]|6[GIRP]|7BNY|9[GC])|M2010J19S[CGYI]|M1908C3JGG|M2102(?:K1[CG]|J2SC)|HM NOTE 1(?:LTE|W)|MI[_ ]PLAY|XIG01|Qin 1s\+|MI_(NOTE_Pro|5X|4i|(?:A2|8)_Lite)|A001XM|lancelot'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -18065,6 +18095,9 @@ Xiaomi:
       device: 'tv'
     - regex: 'MiTV-MSSP1(?:[);/ ]|$)'
       model: 'MiTV 4S'
+      device: 'tv'
+    - regex: 'MiTV-AESP0(?:[);/ ]|$)'
+      model: 'MiTV Stick'
       device: 'tv'
     - regex: '(?:MiTV-AXSO0|MiTV4(?:A|-ANSM0)|MiTV-MSSP0)(?:[);/ ]|$)'
       model: 'MiTV 4A'
