--- a/Tests/fixtures/tv-1.yml
+++ b/Tests/fixtures/tv-1.yml
@@ -2067,3 +2067,21 @@
     model: Smart 400
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: TV Bro/1.0 Mozilla/5.0 (Linux; Android 9; MiTV-AESP0 Build/PI; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/90.0.4430.91 Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: TV Bro
+    version: "1.0"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: Xiaomi
+    model: MiTV Stick
+  os_family: Android
+  browser_family: Chrome
