feat(device) detect brand Turbo-X model: Mercury feat(device) detect brand Majestic model: Crono 54 feat(device) detect brand Energizer model: Power Max P490S feat(device) detect brand Ulefone models: Power 5S, Power 3S, Power 3L feat(device) detect brand Prestigio model: Muze M3 LTE (PSP3515DUO) feat(device) detect brand Nomi models: Evo M1 (i5011), Evo M (i5010), i506 Shine (i506), Iron-M (I4070), Corsa Pro (C070020)

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1379,7 +1379,7 @@
     default: 'WebKit'
 
 #Mercury
-- regex: 'Mercury(?:/(\d+[\.\d]+))?'
+- regex: 'Mercury/(?:(\d+[\.\d]+))?'
   name: 'Mercury'
   version: '$1'
 
