--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -53,3 +53,21 @@
     model: 10.1Q205
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Nomi_C070020) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.88 Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 91.0.4472.88
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Nomi
+    model: Corsa Pro
+  os_family: Android
+  browser_family: Chrome
